--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <center>
-    <title></title><script src="/script.js" defer></script>
+  <head>  
+      <title>Climate-Change </title>
   </head>  
   <body>
     
